align title fix

--- a/client/src/scss/components/_list.scss
+++ b/client/src/scss/components/_list.scss
@@ -27,6 +27,8 @@
   }
 
   &__label-link {
+    display: flex;
+    align-items: center;
     &:hover {
       color: $primary-color !important;
       path {
